<resources>
    <string name="app_name">Loveaholic</string>
    <string name="love_calculator">Love  Calculator</string>
    <string name="you_name">Your Name</string>
    <string name="you_partner_name">Your Partner Name</string>
    <string name="btn_start">START</string>
    <string name="btn_result">RESULT</string>
    <string name="banner_ads">ca-app-pub-2403730688875576/1362921040</string>
    <string name="app_id">ca-app-pub-2403730688875576~3250717787</string>
    <string name="interstitial_ad">ca-app-pub-2403730688875576/9979777664</string>
    <string name="techish">TECHISH DEVELOPMENT</string>
    <string name="splash_img">hearticon</string>
    <string name="about_us">About Us</string>
    <string name="terms">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="note">This is Fun app,all the love percentage shown is for entertainment purpose</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">FeedBack</string>
    <string name="reset">RESET</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="name_match">Name Match</string>
    <string name="photo_match">Photo Match</string>
    <string name="powered_by">Powered By</string>
    <string name="contact">We Design android application and Website.\nIf you want any website or application for your company ,college or school feel free to contact us
                           \nContact Us :-\n
                        Techish Development\n
                        Email = techishdevelopment@gmail.com</string>
    <string name="policy">Techish Development built the Loveaholic app as a Free app. This SERVICE is provided by Techish Development at no cost and is intended for use as is  . This is an enjoyable entertaining app with simple and winsome user interface

This page is used to inform visitors regarding our policies

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Loveaholic unless otherwise defined in this Privacy Policy.

Information Collection and Use

We do not  collect personal or any sort of information from the user .The name and photo you provide us is use only to give you result and to entertain you we do not save or collect your name and photos. You can use our app without worrying about privacy The name and photo you provide us is use only to give you result and to entertain you we do not save or collect your name and photos.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
AdMob
Google Analytics for Firebase
Firebase Crashlytics

.

Service Providers

We do not employ third-party companies and individuals
We want to inform users of this Service that The name and photo you provide us is use only to give you result and to entertain you we do not save or collect your name and photos. .

Security

We value your trust in using our app, we cannot guarantee its absolute security. The name and photo you provide us is use only to give you result and to entertain you we do not save or collect your name and photos.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from any user.

Changes to This Privacy Policy

We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2021-02-01

Contact Us

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at techishdevelopment@gmail.com.

</string>
    <string name="term_condition">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Techish Development.

Techish Development is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.

The Loveaholic app do not collect any personal . The name and photo you provide us is use only to give you result and to entertain you we do not save or collect your name and photos. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Loveaholic app won’t work properly or at all.

The app does use third party services that declare their own Terms and Conditions.

Link to Terms and Conditions of third party service providers used by the app

Google Play Services
AdMob
Google Analytics for Firebase
Firebase Crashlytics
You should be aware that there are certain things that Techish Development will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Techish Development cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.

If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.

Along the same lines, Techish Development cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Techish Development cannot accept responsibility.

With respect to Techish Development’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Techish Development accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.

At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Techish Development does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.

Changes to This Terms and Conditions

We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page.

These terms and conditions are effective as of 2021-02-01

Contact Us

If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at techishdevelopment@gmail.com.</string>
    <string name="check_for_update">Check for update</string>
    <string name="retry_btn">RETRY</string>
</resources>