<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_main">
<item android:id="@+id/nav_share"
    android:title="@string/share"
    app:showAsAction="always"
    android:icon="@drawable/ic_baseline_share_24"/>
    <item android:id="@+id/nav_aboutus"
        android:title="@string/about_us" />
    <item android:id="@+id/nav_term"
        android:title="@string/terms" />
    <item android:id="@+id/nav_privacy"
        android:title="@string/privacy_policy" />

    <item android:title="@string/rate_us"
        android:id="@+id/nav_rating"/>
    <item android:title="@string/disclaimer"
        android:id="@+id/nav_dis"/>




</menu>